store collection swagger fix
